--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "1.2.8",
     "@radix-ui/react-alert-dialog": "1.1.11",
     "@radix-ui/react-aspect-ratio": "1.1.4",
@@ -48,6 +50,7 @@
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.27",
     "next-themes": "^0.4.6",
+    "prisma": "^6.7.0",
     "react": "^19.1.0",
     "react-day-picker": "9.6.7",
     "react-dom": "^19.1.0",
