--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -37,7 +37,6 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -45,15 +44,13 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "jose": "^6.0.11",
-    "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.2",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "nprogress": "^0.2.0",
-    "pg": "^8.16.0",
     "postgres": "^3.4.7",
+    "puppeteer": "^24.10.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -62,20 +59,17 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "vaul": "^0.9.6"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22",
     "@types/nprogress": "^0.2.3",
-    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8.5",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
